minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__byte_string_type_2.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- Binary:
    length:
      - kind: Decimal
        integer: "10"
      - start: 8
        end: 10
    not_null: true
- start: 0
  end: 20
