minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__character_string_type_1.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- String:
    min_length:
      - kind: Decimal
        integer: "1"
      - start: 8
        end: 9
    max_length:
      - kind: Decimal
        integer: "10"
      - start: 11
        end: 13
    not_null: true
- start: 0
  end: 23
