minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__edge_type_phrase_2.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- name:
    - et
    - start: 21
      end: 23
  direction: Undirected
  left:
    - a
    - start: 59
      end: 60
  filler:
    - key: ~
      label_set:
        - - - transfer
            - start: 25
              end: 33
        - start: 25
          end: 33
      property_types:
        - - name:
              - amount
              - start: 35
                end: 41
            value_type:
              - SignedNumeric:
                  kind:
                    - Int: ~
                    - start: 42
                      end: 45
                  not_null: false
              - start: 42
                end: 45
          - start: 35
            end: 45
    - start: 24
      end: 46
  right:
    - b
    - start: 61
      end: 62
- start: 0
  end: 63
