minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__exact_numeric_type_1.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- SignedNumeric:
    kind:
      - Int16
      - start: 0
        end: 5
    not_null: true
- start: 0
  end: 14
