minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__exact_numeric_type_3.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- UnsignedNumeric:
    kind:
      - Big
      - start: 0
        end: 20
    not_null: false
- start: 0
  end: 20
